<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/delete_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/if_you_delete_the_folder_only_the_notes_in_it_will_be_moved_to_the_default_notes_folder"
        android:textColor="#000"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp"/>

    <TextView
        android:id="@+id/delete_folder_and_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_folder_and_notes"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toBottomOf="@+id/delete_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp"
        android:padding="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/blue_grey1"/>

    <TextView
        android:id="@+id/delete_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_folder_only"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toBottomOf="@+id/delete_folder_and_notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/blue_grey1"/>

    <TextView
        android:id="@+id/delete_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toBottomOf="@+id/delete_folder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/blue_grey1"/>

</androidx.constraintlayout.widget.ConstraintLayout>