<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    style="@style/Theme.AppCompat.Light"
    android:theme="@style/Theme.AppCompat.Light"
    >

    <TextView
        android:id="@+id/selected_notes_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:padding="15dp"
        android:text="@string/dummy_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_light"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:id="@+id/toolbar_content_container"
            android:orientation="horizontal"
            >

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/swipe_refresh"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_view"
            />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_add_white_24dp"
        app:rippleColor="@color/tealLight"
        android:backgroundTint="@color/tealDark"
        android:background="@color/tealDark"
        android:id="@+id/add_new_note_fab"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="normal"
        app:borderWidth="0dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/action_move_notes"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_folder"
            app:layout_constraintEnd_toStartOf="@+id/action_delete_notes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description"/>

        <TextView
            android:id="@+id/action_move_notes_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/move"
            android:textAlignment="center"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/action_delete_notes_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_move_notes" />

        <ImageView
            android:id="@+id/action_delete_notes"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginTop="-5dp"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/action_move_notes"
            android:contentDescription="@string/content_description"/>


        <TextView
            android:id="@+id/action_delete_notes_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="12sp"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/action_move_notes_tv"
            app:layout_constraintTop_toBottomOf="@+id/action_delete_notes"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>